@@ -28,14 +28,12 @@ package org.lflang;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.eclipse.xtext.util.RuntimeIOException;
-
 import org.lflang.TargetConfig.DockerOptions;
 import org.lflang.TargetConfig.TracingOptions;
 import org.lflang.generator.InvalidLfSourceException;
@@ -45,6 +43,7 @@ import org.lflang.lf.Array;
 import org.lflang.lf.Element;
 import org.lflang.lf.KeyValuePair;
 import org.lflang.lf.KeyValuePairs;
+import org.lflang.util.FileUtil;
 import org.lflang.validation.LFValidator;
 
 /**
@@ -211,7 +210,7 @@ public enum TargetProperty {
      * Directive to stage particular files on the class path to be
      * processed by the code generator.
      */
-    FILES("files", UnionType.FILE_OR_FILE_ARRAY, Target.ALL,
+    FILES("files", UnionType.FILE_OR_FILE_ARRAY, List.of(Target.C, Target.CCPP, Target.Python),
             (config, value, err) -> {
                 config.fileNames = ASTUtils.toListOfStrings(value);
             },
@@ -306,12 +305,31 @@ public enum TargetProperty {
                 config.protoFiles = ASTUtils.toListOfStrings(value);
             }),
 
+
+    /**
+     * Directive to specify that ROS2 specific code is generated,
+     */
+    ROS2("ros2", PrimitiveType.BOOLEAN,
+         List.of(Target.CPP), (config, value, err) -> {
+             config.ros2 = ASTUtils.toBoolean(value);
+    }),
+
     /**
      * Directive for specifying a specific version of the reactor runtime library.
      */
     RUNTIME_VERSION("runtime-version", PrimitiveType.STRING,
             Arrays.asList(Target.CPP), (config, value, err) -> {
                 config.runtimeVersion = ASTUtils.toText(value);
+            }),
+    
+    
+    /**
+     * Directive for specifying a specific runtime scheduler, if supported.
+     */
+    SCHEDULER("scheduler", UnionType.SCHEDULER_UNION,
+            Arrays.asList(Target.C, Target.CCPP, Target.Python), (config, value, err) -> {
+                config.schedulerType = (SchedulerOption) UnionType.SCHEDULER_UNION
+                        .forName(ASTUtils.toText(value));
             }),
 
     /**
@@ -323,12 +341,21 @@ public enum TargetProperty {
             }),
 
     /**
-     * Directive to specify the number of threads.
+     * Directive to indicate whether the runtime should use multi-threading.
      */
-    THREADS("threads", PrimitiveType.NON_NEGATIVE_INTEGER,
-            Arrays.asList(Target.C, Target.CPP, Target.CCPP, Target.Python),
+    THREADING("threading", PrimitiveType.BOOLEAN,
+              List.of(Target.C, Target.CCPP, Target.Python),
+              (config, value, err) -> {
+                  config.threading = ASTUtils.toBoolean(value);
+              }),
+
+    /**
+     * Directive to specify the number of worker threads used by the runtime.
+     */
+    WORKERS("workers", PrimitiveType.NON_NEGATIVE_INTEGER,
+            List.of(Target.C, Target.CCPP, Target.Python, Target.CPP, Target.Rust),
             (config, value, err) -> {
-                config.threads = ASTUtils.toInteger(value);
+                config.workers = ASTUtils.toInteger(value);
             }),
     
     /**
@@ -403,7 +430,7 @@ public enum TargetProperty {
                  List.of(Target.Rust), (config, value, err) -> {
         Path referencePath;
         try {
-            referencePath = FileConfig.toPath(value.eResource().getURI()).toAbsolutePath();
+            referencePath = FileUtil.toPath(value.eResource().getURI()).toAbsolutePath();
         } catch (IOException e) {
             err.reportError(value, "Invalid path? " + e.getMessage());
             throw new RuntimeIOException(e);
@@ -760,9 +787,10 @@ public enum TargetProperty {
         BUILD_TYPE_UNION(Arrays.asList(BuildType.values()), null),
         COORDINATION_UNION(Arrays.asList(CoordinationType.values()),
                 CoordinationType.CENTRALIZED),
+        SCHEDULER_UNION(Arrays.asList(SchedulerOption.values()), SchedulerOption.getDefault()),
         LOGGING_UNION(Arrays.asList(LogLevel.values()), LogLevel.INFO),
         CLOCK_SYNC_UNION(Arrays.asList(ClockSyncMode.values()),
-                ClockSyncMode.INITIAL),
+                ClockSyncMode.INIT),
         DOCKER_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.DOCKER_DICT),
                 null),
         TRACING_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.TRACING_DICT),
@@ -995,8 +1023,8 @@ public enum TargetProperty {
      * @author{Edward A. Lee <eal@berkeley.edu>}
      */
     public enum ClockSyncMode {
-        OFF, INITIAL, ON;
-        
+        OFF, INIT, ON; // TODO Discuss initial in now a mode keyword (same as startup) and cannot be used as target property value, thus changed it to init
+        // FIXME I could not test if this change breaks anything
         
         /**
          * Return the name in lower case.
@@ -1273,6 +1301,37 @@ public enum TargetProperty {
         @Override
         public String toString() {
             return this.name().toLowerCase();
+        }
+    }
+    
+    /**
+     * Supported schedulers.
+     * @author{Soroush Bateni <soroush@utdallas.edu>}
+     */
+    public enum SchedulerOption {
+        NP(false),         // Non-preemptive
+        GEDF_NP(true),    // Global EDF non-preemptive
+        GEDF_NP_CI(true); // Global EDF non-preemptive with chain ID
+        // PEDF_NP(true);    // Partitioned EDF non-preemptive (FIXME: To be re-added in a future PR)
+        
+        /**
+         * Indicate whether or not the scheduler prioritizes reactions by deadline.
+         */
+        private final Boolean prioritizesDeadline;
+        
+        /**
+         * Return true if the scheduler prioritizes reactions by deadline.
+         */
+        public Boolean prioritizesDeadline() {
+            return this.prioritizesDeadline;
+        }
+        
+        private SchedulerOption(Boolean prioritizesDeadline) {
+            this.prioritizesDeadline = prioritizesDeadline;
+        }
+        
+        public static SchedulerOption getDefault() {
+            return NP;
         }
     }
 
